# xpemlflow02

./: README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
mlruns/0/: meta.yaml
mlruns/164274738917810141/: meta.yaml
mlruns/164274738917810141/8b16bcf0e38248bfada9722fc5948149/: meta.yaml
mlruns/164274738917810141/8b16bcf0e38248bfada9722fc5948149/artifacts/random_forest_model/: MLmodel  conda.yaml  model.pkl
mlruns/164274738917810141/8b16bcf0e38248bfada9722fc5948149/metrics/: accuracy
mlruns/164274738917810141/8b16bcf0e38248bfada9722fc5948149/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
